# witr-win

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  FEATURES.md  LICENSE  README.md  SECURITY.md  setup-git-hooks.ps1  witr-win.json  witr-win.nuspec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: .gitkeep
chocolatey/: witr-win.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
crates/cli/: Cargo.toml  wix.toml
crates/cli/src/: main.rs  tui.rs
crates/cli/wix/: main.wxs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  models.rs  report.rs
crates/core/src/render/: json.rs  mod.rs  text.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: analyzer.rs  ancestry.rs  classifier.rs  error.rs  handles.rs  lib.rs  net.rs  perf.rs  process_query.rs  process_snapshot.rs  security.rs  services.rs
crates/platform-windows/tests/: integration_tests.rs
