[package]
name = "witr"
description = "Windows-native CLI tool that explains why a process exists"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "witr-win"
path = "src/main.rs"

[dependencies]
witr-core.workspace = true
witr-platform-windows.workspace = true
clap = { version = "4.5", features = ["derive", "color"] }
owo-colors = "4.1"
serde_json = "1.0"
time = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
