[package]
name = "witr"
description = "Windows-native CLI tool that explains why a process exists"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "witr-win"
path = "src/main.rs"

[dependencies]
witr-core.workspace = true
witr-platform-windows.workspace = true
clap = { version = "4.5", features = ["derive", "color"] }
owo-colors = "4.1"
serde_json = "1.0"
time = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
tabled = "0.17"
toml = "0.8"
dirs = "5.0"
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
