[package]
name = "witr-core"
description = "Core models and rendering for witr-win"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
thiserror = "2.0"
anyhow = "1.0"
