[package]
name = "witr-platform-windows"
description = "Windows platform collectors for witr-win"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
witr-core.workspace = true
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "serde-human-readable"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_RemoteDesktop",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Services",
] }
